--- a/main.html
+++ b/main.html
@@ -8,8 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+		<ul type="square" class="unorderlist">
+			<li class="item">The Plot in You</li>
+			<li class="item">The Devil Wears Prada</li>
+			<li class="item">Pierce the Veil</li>
+			<li class="item">Norma Jean</li>
+			<li class="item">The Bled</li>
+			<li class="item">Say Anything</li>
+			<li class="item">The Midway State</li>
+			<li class="item">We Came as Romans</li>
+			<li class="item">Counterparts</li>
+			<li class="item">An Old Dog</li>
+			<li class="item">Oh, Sleeper</li>
+			<li class="item">A Skylit Drive</li>
+			<li class="item">Anywhere But Here</li>
+			
+
+		</ul>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
+
 
 </body>
 
