--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div class="container">
-		<ul type="square" class="unorderlist">
+		<ul type="square" class="unorderlist" id="band">
 			<li class="item">The Plot in You</li>
 			<li class="item">The Devil Wears Prada</li>
 			<li class="item">Pierce the Veil</li>
